--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 ===============
-g libre pilot
+librepylot
 ===============
 
-GLIBREPILOT is an LibreOffice/OpenOffice extension project
+GLIBREPYLOT is an LibreOffice/OpenOffice extension project
 which aims to allow one to easily script Spreadsheets with Python,
 by embedding Python scripts into the spreadsheets themselves
 
@@ -37,3 +37,8 @@ that is usually all system-wide packages. Under Windows one should make
 intended packages available to the Python install that comes along
 LibreOffice/OpenOffice
 
+INSTALL
+========
+TBD - but basically, zip all contents in a file
+with an "oxt" extension and add it as a libreOffice extension
+using "tools->manage extensions"
